<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.MainActivity">

    <TextView
        android:id="@+id/indicadoresEconomicosTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INDICADORES ECONOMICOS"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/idTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingresa moneda, ej: dolar, euro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingresa una fecha dd-mm-yyyy"
        app:layout_constraintTop_toBottomOf="@id/idTipo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="CONSULTAR"
        app:layout_constraintTop_toBottomOf="@id/idFecha"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/indicadoresEconomicosTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/indicadoresEconomicosTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>